data/forge_javadoc/1.9.4/raw/net/minecraft/pathfinding/WalkNodeProcessor.md
---
title: "WalkNodeProcessor"
description: "public class WalkNodeProcessor extends NodeProcessor"
package: "net/minecraft/pathfinding"
version: "1.9.4"
forgeBuild: "12.17.0.2051"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.9.4-12.17.0.2051/net/minecraft/pathfinding/WalkNodeProcessor.html"
sourceType: javadoc
---

# WalkNodeProcessor

**Inheritance:** java.lang.Object → net.minecraft.pathfinding.NodeProcessor → net.minecraft.pathfinding.WalkNodeProcessor

## Class signature

```java
public class WalkNodeProcessor extends NodeProcessor
```

## Methods

- `int findPathOptions(PathPoint [] pathOptions, PathPoint currentPoint, PathPoint targetPoint, float maxDistance)`
- `PathNodeType getPathNodeType(IBlockAccess x, int y, int z, int p_186330_4_)`
- `PathNodeType getPathNodeType(IBlockAccess blockaccessIn, int x, int y, int z, EntityLiving entitylivingIn, int xSize, int ySize, int zSize, boolean canBreakDoorsIn, boolean canEnterDoorsIn)`
- `PathPoint getPathPointToCoords(double x, double y, double z)`
- `PathPoint getStart()`
- `void initProcessor(IBlockAccess sourceIn, EntityLiving mob)`
- `void postProcess()`

## Fields

- `WalkNodeProcessor`
